# capnp-rust-example

capnp-mem-example/: Cargo.toml  build.rs
capnp-mem-example/schemas/: schema.capnp
capnp-mem-example/src/: main.rs
capnp-rpc-example/: Cargo.toml  build.rs
capnp-rpc-example/schemas/: token.capnp
capnp-rpc-example/src/: client.rs  main.rs  server.rs
